# saaya1

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  COMPLETION_REPORT.md  IMPLEMENTATION.md  LLAMA_INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.gradle  gradlew  push_to_github.bat  settings.gradle  setup_llama.ps1
.github/workflows/: android-build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/java/com/saaya/ai/: ChatAdapter.java  ChatMessage.java  LlamaCpp.java  LlamaModel.java  MainActivity.java
app/src/main/res/drawable/: input_background.xml  send_button_background.xml
app/src/main/res/layout/: activity_main.xml  item_message_ai.xml  item_message_user.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml
